# stego

./: Cargo.toml  LICENSE  README.md  lsbpython.py  msg.txt
.github/: FUNDING.yml
img/: logo.xcf
src/: lib.rs  main.rs
tests/: common.rs
tests/img/: beemoviescript  decodedfile
