[package]
name = "stego"
description = "A steganographic swiss army knife"
repository = "https://github.com/ajmwagar/stego"
readme = "README.md"
version = "0.1.4"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
image = "0.23"
structopt = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
atty = "0.2"
